--- a/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
@@ -204,6 +204,8 @@
                                                                 <td width="120">
                                                                     <input type="hidden" name="id_cliente" value="">
                                                                     <input type="hidden" name="id_df" value="1">
+                                                                    <input type="hidden" name="pdescto" value="">
+                                                                    <input type="hidden" name="valor_descto" value="0">
                                                                     <input type="text" name="nocliente" style="width:120px; border:1px solid #000;">
                                                                 </td>
                                                                 <td width="15"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_nocliente"></div></td>
@@ -494,6 +496,18 @@
                                                     <td  width="325" align="right" valign="top" style="font-weight:bold;">
                                                         <table border ="0" width="325" class="gral">
                                                             <!--<tr><td colspan="3" height="2"></td></tr>-->
+                                                            <tr id="tr_importe_subtotal">
+                                                                <td width="80"></td>
+                                                                <td width="60">Importe</td>
+                                                                <td width="120"><input type="text" name="importe_subtotal" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
+                                                            </tr>
+                                                            
+                                                            <tr id="tr_descto">
+                                                                <td width="80"></td>
+                                                                <td width="60">Descuento</td>
+                                                                <td width="120"><input type="text" name="monto_descuento" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
+                                                            </tr>
+                                                            
                                                             <tr>
                                                                 <td width="80"></td>
                                                                 <td width="60">Subtotal</td>
