--- a/erp-quimicos/src/main/webapp/vm/prefacturas/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/prefacturas/startup.vm
@@ -172,13 +172,14 @@
 										
                                         <table border="0" style="margin:0; padding:0;">
 											<tr>
-												<td width="650"></td>
+												<td width="125"></td>
+												<td width="525"></td>
 												<td width="10"></td>
 												<td width="170"></td>
 												<td width="340"></td>
 											</tr>
 											<tr>
-												<td valign="top" width="650"  > 
+												<td valign="top" colspan="2" width="650"  > 
 													<table border="0" class="gral">
 														
 														<tr>
@@ -257,7 +258,7 @@
 											</tr>
 											
 											<tr>
-												<td colspan="4">   
+												<td colspan="5">   
 													<table border="0" class="gral">
 														
 														<tr>
@@ -345,7 +346,7 @@
 											</tr>
 											
 											<tr>
-												<td colspan="4">
+												<td colspan="5">
 													<table border="0" class="gral">
 														<!--
 														<tr><td colspan="11" height="8"></td></tr>
@@ -388,7 +389,7 @@
 											</tr>
 											
 											<tr class="registros">
-												<td colspan="4" style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF;">
+												<td colspan="5" style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF;">
 													
 													<table >
 														<thead>
@@ -419,42 +420,13 @@
 												</td>
 											</tr>
 											
-											<tr>
-												<td colspan="3" width="830"  align="left" valign="top">
-													
-													<div id="div_warning_grid" style="display:none;">
-														
-														<table border ="0">
-															<tr>
-																<td width="10"></td>
-																<td width="600" colspan="4"><div style="color:#d41000;">&nbsp;&nbsp;Datos&nbsp;no&nbsp;validos</div></td>
-																<td width="10"></td>
-															</tr>
-															<tr>
-																<td width="10"></td>
-																<td width="20" style="background-color:#A8A9AB; font-weight: bold;"></td>
-																<td width="120" style="background-color:#A8A9AB; font-weight: bold;">C&oacute;digo&nbsp;producto</td>
-																<td width="200" style="background-color:#A8A9AB; font-weight: bold;">Nombre</td>
-																<td width="250" style="background-color:#A8A9AB; font-weight: bold;">Descripci&oacute;n&nbsp;del&nbsp;error</td>
-																<td width="10"></td>
-															</tr>
-															<tr>
-																<td width="10"></td>
-																<td colspan="5"> 
-																	<div align="left" style="width:600px; height:68px; overflow:scroll; overflow-x: auto; overflow-y: auto; color:#d41000;">
-																		<table id="grid_warning" border="0" style="width:575px;"">
-																			<!-- Aqui se muestran los warning
-																			style="background-color:#e7e8ea;"
-																			-->
-																		</table>
-																	</div>
-																</td>
-															</tr>
-														</table>
-													</div>
-													
-												</td>
-												<td  width="340" align="right" valign="top" style="font-weight: bold;">
+											
+											<tr valign="top" class="gral">
+												<td width="125"><input type="text" name="etiqueta_motivo_descto" value="Motivo&nbsp;del&nbsp;Descuento" class="borde_oculto" style="width:120px;"></td>
+												<td width="525"><input type="text" name="motivo_descuento" style="width:500px;" readOnly="true"></td>
+												<td width="10"></td>
+												<td width="170"></td>
+												<td width="340" rowspan="2" align="right" valign="top" style="font-weight:bold;">
 													<table border ="0" width="300">
 														
 														<tr id="tr_importe_subtotal">
@@ -496,6 +468,46 @@
 														</tr>
 													</table>
 												</td>
+											</tr>
+											
+											
+											<tr>
+												<td colspan="4" width="830"  align="left" valign="top">
+													<div id="div_warning_grid" style="display:none;">
+														<table border ="0">
+															<tr>
+																<td width="10"></td>
+																<td width="600" colspan="4"><div style="color:#d41000;">&nbsp;&nbsp;Datos&nbsp;no&nbsp;validos</div></td>
+																<td width="10"></td>
+															</tr>
+															<tr>
+																<td width="10"></td>
+																<td width="20" style="background-color:#A8A9AB; font-weight: bold;"></td>
+																<td width="120" style="background-color:#A8A9AB; font-weight: bold;">C&oacute;digo&nbsp;producto</td>
+																<td width="200" style="background-color:#A8A9AB; font-weight: bold;">Nombre</td>
+																<td width="250" style="background-color:#A8A9AB; font-weight: bold;">Descripci&oacute;n&nbsp;del&nbsp;error</td>
+																<td width="10"></td>
+															</tr>
+															<tr>
+																<td width="10"></td>
+																<td colspan="5"> 
+																	<div align="left" style="width:600px; height:68px; overflow:scroll; overflow-x: auto; overflow-y: auto; color:#d41000;">
+																		<table id="grid_warning" border="0" style="width:575px;"">
+																			<!-- Aqui se muestran los warning
+																			style="background-color:#e7e8ea;"
+																			-->
+																		</table>
+																	</div>
+																</td>
+															</tr>
+														</table>
+													</div>
+												</td>
+												<!--
+												<td  width="340" align="right" valign="top" style="font-weight:bold;">
+
+												</td>
+												-->
 											</tr>
                                         </table>
                                     </div>
